:pencil2: Fix wrapping items

--- a/src/scss/pages/blog.module.scss
+++ b/src/scss/pages/blog.module.scss
@@ -8,6 +8,9 @@
 
 .cardText {
   @include details.flex-style(wrap, flex-start);
+
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 .pageLink {
